fixed spacing on specific dimensions

--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ section {
     gap: 3rem;
     padding: 1rem;
     margin-bottom: 7rem;
-    max-height: calc(100vh - 100px); /* Adjust based on your header height */
+    /* max-height: calc(100vh - 100px); */
   }
 
   .bio-image {
@@ -133,7 +133,7 @@ section {
     flex-direction: column;
     gap: 3rem;
     padding: 1rem;
-    max-height: calc(100vh - 100px); /* Adjust based on your header height */
+    /* max-height: calc(100vh - 100px); */
   }
 
   .bio-image {
